--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-fhir-persistence-ddb",
-  "version": "0.7.1",
+  "version": "0.7.0",
   "description": "FHIR Solution hosted on AWS Lambda",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -60,5 +60,9 @@
       "\\.(ts)$": "ts-jest"
     },
     "testRegex": ".test.ts"
-  }
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "repository": "git://github.com/awslabs/aws-fhir-persistence-ddb.git"
 }
