--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aws-fhir-persistence-ddb",
+  "name": "@awslabs/aws-fhir-persistence-ddb",
   "version": "0.7.2",
   "description": "FHIR Solution hosted on AWS Lambda",
   "main": "lib/index.js",
