--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@awslabs/fhir-works-on-aws-persistence-ddb",
   "version": "0.9.1",
-  "description": "FHIR Works on AWS persistence's DynamoDB implementation",
+  "description": "FHIR Works on AWS persistence DynamoDB implementation",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "author": "amzn",
