--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "prepublish": "tsc"
   },
   "dependencies": {
-    "fhir-works-on-aws-interface": "^1.0.0",
     "@elastic/elasticsearch": "7",
     "aws-elasticsearch-connector": "^8.2.0",
     "aws-sdk": "^2.610.0",
     "aws-xray-sdk": "^3.1.0",
+    "fhir-works-on-aws-interface": "^1.0.0",
     "mime-types": "^2.1.26",
     "promise.allsettled": "^1.0.2",
     "uuid": "^3.4.0"
@@ -53,6 +53,7 @@
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.1.0",
+    "jest-each": "^26.4.2",
     "jest-mock-extended": "^1.0.8",
     "prettier": "^1.19.1",
     "sinon": "^9.0.2",
