--- a/package.json
+++ b/package.json
@@ -28,17 +28,19 @@
     "prepublish": "tsc"
   },
   "dependencies": {
-    "fhir-works-on-aws-interface": "^1.0.0",
     "@elastic/elasticsearch": "7",
     "aws-elasticsearch-connector": "^8.2.0",
     "aws-sdk": "^2.610.0",
     "aws-xray-sdk": "^3.1.0",
+    "fhir-works-on-aws-interface": "^1.0.0",
+    "lodash": "^4.17.20",
     "mime-types": "^2.1.26",
     "promise.allsettled": "^1.0.2",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@types/jest": "^25.1.1",
+    "@types/lodash": "^4.14.161",
     "@types/mime-types": "^2.1.0",
     "@types/node": "^12",
     "@types/promise.allsettled": "^1.0.3",
@@ -53,6 +55,7 @@
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.1.0",
+    "jest-each": "^26.4.2",
     "jest-mock-extended": "^1.0.8",
     "prettier": "^1.19.1",
     "sinon": "^9.0.2",
