--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "aws-elasticsearch-connector": "^8.2.0",
     "aws-sdk": "^2.610.0",
     "aws-xray-sdk": "^3.1.0",
+    "axios": "^0.20.0",
     "fhir-works-on-aws-interface": "^1.0.0",
     "mime-types": "^2.1.26",
     "promise.allsettled": "^1.0.2",
