--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "axios": "^0.20.0",
     "fhir-works-on-aws-interface": "^1.0.0",
     "mime-types": "^2.1.26",
-    "promise.allsettled": "^1.0.2",
+    "promise.allsettled": "^1.0.2"
   },
   "devDependencies": {
     "@types/jest": "^25.1.1",
