--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prepublish": "tsc"
   },
   "dependencies": {
+    "aws4-axios": "^1.12.0",
     "axios": "^0.20.0",
     "fhir-works-on-aws-interface": "^2.0.0",
     "mime-types": "^2.1.26"
