--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "aws-elasticsearch-connector": "^8.2.0",
     "aws-sdk": "^2.610.0",
     "aws-xray-sdk": "^3.1.0",
-    "fhir-works-on-aws-interface": "^2.0.0",
+    "fhir-works-on-aws-interface": "file:.yalc/fhir-works-on-aws-interface",
     "lodash": "^4.17.20",
     "mime-types": "^2.1.26",
     "promise.allsettled": "^1.0.2",
