--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "aws-sdk": "^2.610.0",
     "aws-xray-sdk": "^3.1.0",
     "fhir-works-on-aws-interface": "^3.0.0",
+    "flat": "^5.0.2",
     "lodash": "^4.17.20",
     "mime-types": "^2.1.26",
     "promise.allsettled": "^1.0.2",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
+    "@types/flat": "^5.0.1",
     "@types/jest": "^25.1.1",
     "@types/lodash": "^4.14.161",
     "@types/mime-types": "^2.1.0",
