--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
   },
   "resolutions": {
     "path-parse": "^1.0.7",
-    "set-value": "^4.0.1"
+    "set-value": "^4.0.1",
+    "ansi-regex": "^6.0.1"
   },
   "jest": {
     "moduleFileExtensions": [
