chore: pin elasticsearch version
This avoids compatibility issues.
See: https://opensearch.org/docs/clients/index/

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prepublish": "tsc"
   },
   "dependencies": {
-    "@elastic/elasticsearch": "^7.4",
+    "@elastic/elasticsearch": "7.13.0",
     "@types/aws-lambda": "^8.10.63",
     "aws-elasticsearch-connector": "^8.2.0",
     "aws-sdk": "^2.610.0",
