--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "release": "yarn run build && yarn run lint && yarn run test",
     "clean": "rm -rf build/* node_modules/* dist/* .serverless/* .nyc_output/* lib/*",
     "local": "node .",
-    "prepublish": "tsc"
+    "prepublish": "tsc",
+    "standard-version": "standard-version --skip.tag=true"
   },
   "dependencies": {
     "@elastic/elasticsearch": "7.13.0",
@@ -63,6 +64,7 @@
     "jest-mock-extended": "^1.0.8",
     "prettier": "^2.4.1",
     "sinon": "^9.2.2",
+    "standard-version": "^9.3.2",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
   },
