chore: add unit test coverage and enforcement (#129)

--- a/package.json
+++ b/package.json
@@ -77,10 +77,7 @@
       "ts",
       "js"
     ],
-    "coverageReporters": [
-      "text",
-      "html"
-    ],
+    "collectCoverage": true,
     "transform": {
       "\\.(ts)$": "ts-jest"
     },
