remove codecov changes

--- a/package.json
+++ b/package.json
@@ -77,6 +77,10 @@
       "ts",
       "js"
     ],
+    "coverageReporters": [
+      "text",
+      "html"
+    ],
     "collectCoverage": true,
     "transform": {
       "\\.(ts)$": "ts-jest"
