--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@elastic/elasticsearch": "7.13.0",
     "@types/aws-lambda": "^8.10.83",
     "aws-elasticsearch-connector": "^8.2.0",
+    "aws-embedded-metrics": "^4.0.0",
     "aws-sdk": "^2.1000.0",
     "aws-xray-sdk": "^3.3.3",
     "fhir-works-on-aws-interface": "^12.1.0",
