--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
   },
   "resolutions": {
     "path-parse": "^1.0.7",
-    "set-value": "^4.0.1"
+    "set-value": "^4.0.1",
+    "json5": "2.2.3"
   },
   "jest": {
     "moduleFileExtensions": [
