--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "path-parse": "^1.0.7",
     "set-value": "^4.0.1",
     "json5": "2.2.3",
-    "xml2js":"0.5.0"
+    "xml2js":"^0.5.0"
   },
   "jest": {
     "moduleFileExtensions": [
